--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div class="layout__header">
+            <div class="logo"></div>   
+        </div>
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__li"><a class="nav__link" href="#">Works</a></li>
+                <li class="nav__li"><a class="nav__link" href="#">Services</a></li>
+                <li class="nav__li"><a class="nav__link" href="#">Contacts</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="layout__main">
+            <h1 class="main__heading">Musician</h1>
+            <div class="main__info"><p>Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcor.</p></div>
+        </div>
+    </main>
+    <div class="img"><img src="images/img-musician.jpg" alt="Musician"></div>
 </body>
 </html>
