--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <h1 class="main__heading">Musician</h1>
                     <div class="main__info"><p>Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcor.</p></div>
                 </div>
+                <div class="icon-arrow"> <img src="images/arrow-down-icon.png" alt="arrow-down"></div>
         </div>
         <div class="container-right">
             <picture>
